; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux_playlist.c_stream_read_word_endian.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux_playlist.c_stream_read_word_endian.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @stream_read_word_endian to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stream_read_word_endian(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @stream_read_char(i32* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = shl i32 %8, 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @stream_read_char(i32* %10)
  %12 = or i32 %9, %11
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = lshr i32 %16, 8
  %18 = and i32 %17, 255
  %19 = load i32, i32* %5, align 4
  %20 = shl i32 %19, 8
  %21 = or i32 %18, %20
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %15, %2
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @stream_read_char(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
